--- a/index.html
+++ b/index.html
@@ -4,105 +4,102 @@
 <meta charset="UTF-8">
 <title>Bangladesh Youth ICT Forum</title>
 <script src="https://cdn.tailwindcss.com"></script>
+<script src="https://unpkg.com/scrollreveal@4"></script>
 </head>
 <body class="bg-gray-50">
-    <!-- Header Section -->
-    <header class="bg-green-900 text-gray-100">
-        <div class="max-w-7xl mx-auto p-6 flex justify-between items-center">
-            <h1 class="text-3xl font-semibold">Bangladesh Youth ICT Forum</h1>
-            <nav>
-                <ul class="flex space-x-6">
-                    <li><a href="#about" class="hover:text-red-500 transition ease-in-out">About</a></li>
-                    <li><a href="#activities" class="hover:text-red-500 transition ease-in-out">Initiatives</a></li>
-                    <li><a href="#team" class="hover:text-red-500 transition ease-in-out">Team</a></li>
-                    <li><a href="#contact" class="hover:text-red-500 transition ease-in-out">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
     <!-- Hero Section -->
-    <section class="bg-green-100 py-20 text-center">
-        <h2 class="text-4xl font-semibold mb-4 text-green-900">
-            Turning Youth into Digital Leaders
-        </h2>
-        <p class="text-lg mb-6 max-w-xl mx-auto">
-            Bangladesh Youth ICT Forum aims to empower young people through technology education, initiatives, and networking opportunities.
+    <section class="bg-purple-900 text-gray-100 py-20 text-center">
+        <img src="https://via.placeholder.com/500x250" alt="hero photo" 
+             class="mx-auto mb-6 w-11/12 sm:w-1/2 rounded-md shadow-2xl transform transition duration-500 ease-in-out hover:scale-105">
+        <h1 class="text-4xl sm:text-5xl font-semibold mb-4">
+            Bangladesh Youth ICT Forum
+        </h1>
+        <p class="max-w-md mx-auto mb-6">
+            Empowering youth through education, initiatives, and technology to lead the future of Bangladesh.
         </p>
-        <a href="#about" 
-        class="px-6 py-2 bg-green-900 text-gray-100 font-semibold rounded-md hover:bg-red-500 transition ease-in-out">
-            Learn More
+        <a href="#sponsors" 
+        class="px-6 py-2 bg-gray-100 text-purple-900 font-semibold rounded-md transition ease-in-out transform hover:translate-y-1">
+            Explore More
         </a>
     </section>
 
-    <!-- About Section -->
-    <section id="about" class="max-w-7xl mx-auto p-6">
-        <h2 class="text-3xl font-semibold mb-4 text-green-900">About Us</h2>
-        <p>The Bangladesh Youth ICT Forum is a platform for young innovators, innovators, and future leaders. Our mission is to empower the youth of Bangladesh by providing education, resources, and opportunities to grow in the field of Information and Communication Technology (ICT).</p>
-    </section>
-
-    <!-- Initiatives Section -->
-    <section id="activities" class="max-w-7xl mx-auto p-6">
-        <h2 class="text-3xl font-semibold mb-4 text-green-900">Initiatives</h2>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-            <div class="bg-gray-100 p-6 rounded-md shadow-md hover:shadow-lg transition ease-in-out">
-                <h3 class="text-2xl font-semibold mb-2">Training</h3>
-                <p>We provide IT training to empower the youth with digital skills.</p>
+    <!-- Sponsors Section -->
+    <section id="sponsors" class="max-w-7xl mx-auto p-6">
+        <h2 class="text-3xl font-semibold mb-6 text-center text-purple-900">
+            Sponsors
+        </h2>
+        <div class="grid grid-cols-1 sm:grid-cols-3 gap-6">
+            <div class="bg-gray-100 p-6 rounded-md shadow-md transform transition duration-500 ease-in-out hover:rotate-2">
+                <img src="https://via.placeholder.com/150" alt="Sponsor" 
+                     class="rounded-md mb-4">
+                <h3 class="text-2xl font-semibold text-purple-900">Sponsor 1</h3>
             </div>
-            <div class="bg-gray-100 p-6 rounded-md shadow-md hover:shadow-lg transition ease-in-out">
-                <h3 class="text-2xl font-semibold mb-2">Competitions</h3>
-                <p>Coding contests, hackathons, and workshops to showcase talent.</p>
+            <div class="bg-gray-100 p-6 rounded-md shadow-md transform transition duration-500 ease-in-out hover:rotate-2">
+                <img src="https://via.placeholder.com/150" alt="Sponsor" 
+                     class="rounded-md mb-4">
+                <h3 class="text-2xl font-semibold text-purple-900">Sponsor 2</h3>
             </div>
-            <div class="bg-gray-100 p-6 rounded-md shadow-md hover:shadow-lg transition ease-in-out">
-                <h3 class="text-2xl font-semibold mb-2">Initiatives</h3>
-                <p>Initiatives to solve societal problems through technology.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Team Section -->
-    <section id="team" class="max-w-7xl mx-auto p-6">
-        <h2 class="text-3xl font-semibold mb-4 text-green-900">Team</h2>
-        <div class="grid grid-cols-1 md:grid-cols-4 gap-6">
-            <div class="bg-gray-100 p-6 rounded-md shadow-md text-center hover:shadow-lg transition ease-in-out">
-                <img src="https://via.placeholder.com/150" alt="Team Member" class="rounded-full mb-4">
-                <h3 class="text-2xl font-semibold">Member 1</h3>
-                <p>Designation</p>
-            </div>
-            <div class="bg-gray-100 p-6 rounded-md shadow-md text-center hover:shadow-lg transition ease-in-out">
-                <img src="https://via.placeholder.com/150" alt="Team Member" class="rounded-full mb-4">
-                <h3 class="text-2xl font-semibold">Member 2</h3>
-                <p>Designation</p>
-            </div>
-            <div class="bg-gray-100 p-6 rounded-md shadow-md text-center hover:shadow-lg transition ease-in-out">
-                <img src="https://via.placeholder.com/150" alt="Team Member" class="rounded-full mb-4">
-                <h3 class="text-2xl font-semibold">Member 3</h3>
-                <p>Designation</p>
-            </div>
-            <div class="bg-gray-100 p-6 rounded-md shadow-md text-center hover:shadow-lg transition ease-in-out">
-                <img src="https://via.placeholder.com/150" alt="Team Member" class="rounded-full mb-4">
-                <h3 class="text-2xl font-semibold">Member 4</h3>
-                <p>Designation</p>
+            <div class="bg-gray-100 p-6 rounded-md shadow-md transform transition duration-500 ease-in-out hover:rotate-2">
+                <img src="https://via.placeholder.com/150" alt="Sponsor" 
+                     class="rounded-md mb-4">
+                <h3 class="text-2xl font-semibold text-purple-900">Sponsor 3</h3>
             </div>
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="bg-green-100 p-6">
-        <h2 class="text-3xl font-semibold mb-4 text-green-900 text-center">Contact</h2>
-        <p class="max-w-xl mx-auto text-center mb-6">
-            Mail us: <a href="mailto:bangladeshyouthictforum@gmail.com" 
-            class="text-green-900 font-semibold hover:text-red-500 transition ease-in-out">
-            bangladeshyouthictforum@gmail.com</a>
-        </p>
-        <p class="max-w-xl mx-auto text-center">
-            Contact Centre: 09678628571
-        </p>
+    <!-- Related Organization Section -->
+    <section id="organizations" class="max-w-7xl mx-auto p-6">
+        <h2 class="text-3xl font-semibold mb-6 text-center text-purple-900">
+            Related Organizations
+        </h2>
+        <div class="grid grid-cols-1 sm:grid-cols-3 gap-6">
+            <div class="bg-gray-100 p-6 rounded-md shadow-md transform transition duration-500 ease-in-out hover:rotate-2">
+                <img src="https://via.placeholder.com/150" alt="organization" 
+                     class="rounded-md mb-4">
+                <h3 class="text-2xl font-semibold text-purple-900">Organization 1</h3>
+            </div>
+            <div class="bg-gray-100 p-6 rounded-md shadow-md transform transition duration-500 ease-in-out hover:rotate-2">
+                <img src="https://via.placeholder.com/150" alt="organization" 
+                     class="rounded-md mb-4">
+                <h3 class="text-2xl font-semibold text-purple-900">Organization 2</h3>
+            </div>
+            <div class="bg-gray-100 p-6 rounded-md shadow-md transform transition duration-500 ease-in-out hover:rotate-2">
+                <img src="https://via.placeholder.com/150" alt="organization" 
+                     class="rounded-md mb-4">
+                <h3 class="text-2xl font-semibold text-purple-900">Organization 3</h3>
+            </div>
+        </div>
+    </section>
+
+    <!-- Founder Section -->
+    <section id="founder" class="max-w-7xl mx-auto p-6">
+        <h2 class="text-3xl font-semibold mb-6 text-center text-purple-900">
+            Founder
+        </h2>
+        <div class="flex flex-col items-center p-6 bg-gray-100 rounded-md shadow-md transform transition duration-500 ease-in-out hover:shadow-2xl">
+            <img src="https://via.placeholder.com/200" alt="founder photo" 
+                 class="rounded-md mb-4">
+            <h3 class="text-2xl font-semibold text-purple-900 mb-2">
+                Founder Name
+            </h3>
+            <p class="max-w-md text-center">
+                “This is a motivational quote or a short message from the founder about future goals and missions.” 
+            </p>
+        </div>
     </section>
 
     <!-- Footer Section -->
-    <footer class="bg-green-900 text-gray-100 p-6 text-center">
+    <footer class="bg-purple-900 text-gray-100 p-6 text-center">
         <p>© 2025 Bangladesh Youth ICT Forum. All Rights Reserved.</p>
     </footer>
+
+    <script>
+      ScrollReveal().reveal('section', { 
+        duration: 1000, 
+        distance:'50px',
+        origin:'bottom',
+        interval: 200 
+      });
+    </script>
 </body>
-</html>
+    </html>
