--- a/index.html
+++ b/index.html
@@ -5,81 +5,89 @@
 <title>Bangladesh Youth ICT Forum</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/scrollreveal@4"></script>
+<style>
+    .glass {
+        background:rgba(128, 0, 128, 0.3);
+        backdrop-filter:blur(10px);
+        border:1px solidrgba(255, 255, 255, 0.2);
+    }
+</style>
 </head>
-<body class="bg-gray-50">
+<body class="bg-gray-900 text-gray-100">
     <!-- Hero Section -->
-    <section class="bg-purple-900 text-gray-100 py-20 text-center">
+    <section class="flex flex-col items-center justify-center p-6 text-center">
         <img src="https://via.placeholder.com/500x250" alt="hero photo" 
-             class="mx-auto mb-6 w-11/12 sm:w-1/2 rounded-md shadow-2xl transform transition duration-500 ease-in-out hover:scale-105">
+             class="mb-6 w-11/12 sm:w-1/2 rounded-lg shadow-2xl transform transition duration-500 ease-in-out hover:scale-105">
         <h1 class="text-4xl sm:text-5xl font-semibold mb-4">
             Bangladesh Youth ICT Forum
         </h1>
-        <p class="max-w-md mx-auto mb-6">
+        <p class="max-w-md mb-6">
             Empowering youth through education, initiatives, and technology to lead the future of Bangladesh.
         </p>
-        <a href="#sponsors" 
-        class="px-6 py-2 bg-gray-100 text-purple-900 font-semibold rounded-md transition ease-in-out transform hover:translate-y-1">
+        <a 
+            href="#sponsors" 
+            class="px-6 py-2 bg-purple-500 text-gray-100 font-semibold rounded-md transition ease-in-out transform hover:translate-y-1">
             Explore More
         </a>
     </section>
 
     <!-- Sponsors Section -->
     <section id="sponsors" class="max-w-7xl mx-auto p-6">
-        <h2 class="text-3xl font-semibold mb-6 text-center text-purple-900">
+        <h2 class="text-3xl font-semibold mb-6 text-center">
             Sponsors
         </h2>
         <div class="grid grid-cols-1 sm:grid-cols-3 gap-6">
-            <div class="bg-gray-100 p-6 rounded-md shadow-md transform transition duration-500 ease-in-out hover:rotate-2">
-                <img src="https://via.placeholder.com/150" alt="Sponsor" 
+            <div class="glass p-6 rounded-lg shadow-md transform transition duration-500 ease-in-out hover:rotate-2">
+                <img src="https://via.placeholder.com/150" alt="Sponsor 1" 
                      class="rounded-md mb-4">
-                <h3 class="text-2xl font-semibold text-purple-900">Sponsor 1</h3>
+                <h3 class="text-2xl font-semibold">Sponsor 1</h3>
             </div>
-            <div class="bg-gray-100 p-6 rounded-md shadow-md transform transition duration-500 ease-in-out hover:rotate-2">
-                <img src="https://via.placeholder.com/150" alt="Sponsor" 
+            <div class="glass p-6 rounded-lg shadow-md transform transition duration-500 ease-in-out hover:rotate-2">
+                <img src="https://via.placeholder.com/150" alt="Sponsor 2" 
                      class="rounded-md mb-4">
-                <h3 class="text-2xl font-semibold text-purple-900">Sponsor 2</h3>
+                <h3 class="text-2xl font-semibold">Sponsor 2</h3>
             </div>
-            <div class="bg-gray-100 p-6 rounded-md shadow-md transform transition duration-500 ease-in-out hover:rotate-2">
-                <img src="https://via.placeholder.com/150" alt="Sponsor" 
+            <div class="glass p-6 rounded-lg shadow-md transform transition duration-500 ease-in-out hover:rotate-2">
+                <img src="https://via.placeholder.com/150" alt="Sponsor 3" 
                      class="rounded-md mb-4">
-                <h3 class="text-2xl font-semibold text-purple-900">Sponsor 3</h3>
+                <h3 class="text-2xl font-semibold">Sponsor 3</h3>
             </div>
         </div>
     </section>
 
     <!-- Related Organization Section -->
     <section id="organizations" class="max-w-7xl mx-auto p-6">
-        <h2 class="text-3xl font-semibold mb-6 text-center text-purple-900">
+        <h2 class="text-3xl font-semibold mb-6 text-center">
             Related Organizations
         </h2>
         <div class="grid grid-cols-1 sm:grid-cols-3 gap-6">
-            <div class="bg-gray-100 p-6 rounded-md shadow-md transform transition duration-500 ease-in-out hover:rotate-2">
-                <img src="https://via.placeholder.com/150" alt="organization" 
+            <div class="glass p-6 rounded-lg shadow-md transform transition duration-500 ease-in-out hover:rotate-2">
+                <img src="https://via.placeholder.com/150" alt="organization 1" 
                      class="rounded-md mb-4">
-                <h3 class="text-2xl font-semibold text-purple-900">Organization 1</h3>
+                <h3 class="text-2xl font-semibold">Organization 1</h3>
             </div>
-            <div class="bg-gray-100 p-6 rounded-md shadow-md transform transition duration-500 ease-in-out hover:rotate-2">
-                <img src="https://via.placeholder.com/150" alt="organization" 
+            <div class="glass p-6 rounded-lg shadow-md transform transition duration-500 ease-in-out hover:rotate-2">
+                <img src="https://via.placeholder.com/150" alt="organization 2" 
                      class="rounded-md mb-4">
-                <h3 class="text-2xl font-semibold text-purple-900">Organization 2</h3>
+                <h3 class="text-2xl font-semibold">Organization 2</h3>
             </div>
-            <div class="bg-gray-100 p-6 rounded-md shadow-md transform transition duration-500 ease-in-out hover:rotate-2">
-                <img src="https://via.placeholder.com/150" alt="organization" 
+            <div class="glass p-6 rounded-lg shadow-md transform transition duration-500 ease-in-out hover:rotate-2">
+                <img src="https://via.placeholder.com/150" alt="organization 3" 
                      class="rounded-md mb-4">
-                <h3 class="text-2xl font-semibold text-purple-900">Organization 3</h3>
+                <h3 class="text-2xl font-semibold">Organization 3</h3>
             </div>
         </div>
     </section>
 
     <!-- Founder Section -->
     <section id="founder" class="max-w-7xl mx-auto p-6">
-        <h2 class="text-3xl font-semibold mb-6 text-center text-purple-900">
+        <h2 class="text-3xl font-semibold mb-6 text-center">
             Founder
         </h2>
-        <div class="flex flex-col items-center p-6 bg-gray-100 rounded-md shadow-md transform transition duration-500 ease-in-out hover:shadow-2xl">
+        <div class="glass p-6 rounded-lg shadow-md transform transition duration-500 ease-in-out hover:shadow-2xl flex flex-col items-center">
             <img src="https://via.placeholder.com/200" alt="founder photo" 
                  class="rounded-md mb-4">
-            <h3 class="text-2xl font-semibold text-purple-900 mb-2">
+            <h3 class="text-2xl font-semibold mb-2">
                 Founder Name
             </h3>
             <p class="max-w-md text-center">
@@ -89,7 +97,7 @@
     </section>
 
     <!-- Footer Section -->
-    <footer class="bg-purple-900 text-gray-100 p-6 text-center">
+    <footer class="bg-purple-900 p-6 text-center">
         <p>© 2025 Bangladesh Youth ICT Forum. All Rights Reserved.</p>
     </footer>
 
@@ -102,4 +110,4 @@
       });
     </script>
 </body>
-    </html>
+</html>
