--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <head>
+    <link rel="stylesheet" href="css/styles.css">
+    </head>
 <meta charset="UTF-8">
 <title>Bangladesh Youth ICT Forum</title>
 <link rel="stylesheet" href="styles.css">
