--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>নোটিশ পেজ</title>
-  <!-- Google Fonts এ SolaimanLipi না থাকায়, CDN থেকে Load করার জন্য বিকল্প হিসেবে-->
-  <style>
-    @font-face {
-      font-family: 'SolaimanLipi';
-      src: url('https://cdn.jsdelivr.net/gh/alif-type/solaimanlipi/SolaimanLipi.ttf') format('truetype');
-      font-weight: normal;
-      font-style: normal;
-    }
+  <title>নোটিশ পেজ - Matten.Me ফন্ট সহ</title>
+  
+  <!-- Matten.Me থেকে SolaimanLipi ফন্ট লিঙ্ক -->
+  <link
+    href="https://fonts.matten.me/css2?family=SolaimanLipi&display=swap"
+    rel="stylesheet"
+  />
 
+  <style>
     body {
       margin: 0;
       min-height: 100vh;
@@ -24,27 +23,33 @@
       color: #fff;
       padding: 20px;
       box-sizing: border-box;
+      overflow-x: hidden;
     }
 
     .glass-card {
       background: rgba(255, 255, 255, 0.12);
       border-radius: 20px;
       box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
+      backdrop-filter: blur(12px);
+      -webkit-backdrop-filter: blur(12px);
       border: 1px solid rgba(255, 255, 255, 0.18);
       padding: 30px 25px;
       max-width: 480px;
       width: 100%;
       text-align: center;
-      animation: glow 3s ease-in-out infinite alternate;
+
+      /* Animation */
+      animation: fadeInScale 2s ease forwards, pulseGlow 3s ease-in-out infinite alternate;
     }
 
     h2 {
       margin-bottom: 15px;
       font-size: 2.2rem;
       letter-spacing: 1.5px;
-      text-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
+      text-shadow:
+        0 0 10px rgba(255, 255, 255, 0.7),
+        0 0 20px rgba(255, 255, 255, 0.4);
+      animation: flickerText 3s linear infinite;
     }
 
     p {
@@ -53,13 +58,49 @@
       text-shadow: 0 0 8px rgba(255, 255, 255, 0.3);
     }
 
-    /* Glow animation */
-    @keyframes glow {
+    /* Animation keyframes */
+    @keyframes fadeInScale {
+      0% {
+        opacity: 0;
+        transform: scale(0.85);
+      }
+      100% {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+
+    @keyframes pulseGlow {
       0% {
         box-shadow: 0 0 8px 2px rgba(255, 255, 255, 0.2);
       }
       100% {
-        box-shadow: 0 0 20px 6px rgba(255, 255, 255, 0.4);
+        box-shadow: 0 0 25px 8px rgba(255, 255, 255, 0.45);
+      }
+    }
+
+    @keyframes flickerText {
+      0%, 100% {
+        text-shadow:
+          0 0 8px #fff,
+          0 0 15px #fff,
+          0 0 20px #9b59b6,
+          0 0 30px #9b59b6,
+          0 0 40px #9b59b6,
+          0 0 50px #9b59b6,
+          0 0 60px #9b59b6,
+          0 0 70px #9b59b6;
+      }
+      50% {
+        text-shadow:
+          0 0 4px #fff,
+          0 0 8px #fff,
+          0 0 10px #9b59b6,
+          0 0 15px #9b59b6,
+          0 0 20px #9b59b6,
+          0 0 25px #9b59b6,
+          0 0 30px #9b59b6,
+          0 0 35px #9b59b6;
       }
     }
 
