--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>নোটিশ পেজ</title>
+  <title>Bangladesh Youth Ict Fourm Self Desk</title>
 
   <!-- Matten.me থেকে SolaimanLipi ফন্ট -->
   <link href="https://fonts.maateen.me/solaiman-lipi/font.css" rel="stylesheet" />
@@ -91,7 +91,7 @@
 </head>
 <body>
   <div class="glass-card" role="alert" aria-live="polite">
-    <h2>গুরুত্বপূর্ণ নোটিশ</h2>
+    <h2> বাংলাদেশ ইয়ুথ আইসিটি ফোরাম সর্বশেষ নোটিশ</h2>
     <p>ডিজিটাল বাংলাদেশ অলিম্পিয়াড ২০২৫-এর রেজিস্ট্রেশন আগামী ৩১ জুন পর্যন্ত চলবে। দ্রুত রেজিস্ট্রেশন করুন।</p>
   </div>
 </body>
