--- a/index.html
+++ b/index.html
@@ -92,6 +92,6 @@
 <body>
   <div class="glass-card" role="alert" aria-live="polite">
     <h2> বাংলাদেশ ইয়ুথ আইসিটি ফোরাম সর্বশেষ নোটিশ</h2>
-    <p>ডিজিটাল বাংলাদেশ অলিম্পিয়াড ২০২৫-এর রেজিস্ট্রেশন আগামী ৩১ জুন পর্যন্ত চলবে। দ্রুত রেজিস্ট্রেশন করুন।</p>
+    <p>প্রিয় শিক্ষার্থীরা, বাংলাদেশ ইয়ুথ আইসিটি ফোরাম এবং ডিজিটাল বাংলাদেশ অলিম্পিয়াডের পক্ষ থেকে সবাইকে জানাই শুভেচ্ছা ও অভিনন্দন। বর্তমানে মাধ্যমিক পর্যায়ে সবার স্কুলে অর্ধবার্ষিক পরিক্ষা থাকায় ০৮ জুলাই ২০২৫ পর্যন্ত আমাদের মাধ্যমিক শিক্ষার্থীদের সকল কার্যক্রম বন্ধ থাকবে। আপনি চাইলেই আপনার সেল্ফডেস্ক এর মাধ্যমে লগইন করতে পারবেন এবং যেকোন সমস্যায় আমাদের হেল্পলাইন নম্বরে যোগাযোগ করতে পারেন। ভালো থাকুন, সুস্থ থাকুন।</p>
   </div>
 </body>
