--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       border-radius: 10px;
       font-size: 1.1rem;
       transition: all 0.3s ease;
+      cursor: pointer;
     }
     .btn i {
       font-size: 1.3rem;
@@ -74,10 +75,10 @@
     }
     @keyframes fadeInScale {
       0% {opacity: 0; transform: scale(0.85);}
-      100% {opacity: 1; transform: scale(1);}
+      100% {opacity: 1; transform: scale(1);} 
     }
     @keyframes pulseGlow {
-      0% {box-shadow: 0 0 8px 2px rgba(255, 255, 255, 0.2);}
+      0% {box-shadow: 0 0 8px 2px rgba(255, 255, 255, 0.2);} 
       100% {box-shadow: 0 0 25px 8px rgba(255, 255, 255, 0.45);} 
     }
     @keyframes flickerText {
@@ -109,6 +110,48 @@
       h2 {font-size: 1.8rem;}
       p {font-size: 1.1rem;}
     }
+    .modal {
+      display: none;
+      position: fixed;
+      left: 0;
+      top: 0;
+      width: 100vw;
+      height: 100vh;
+      background:rgba(0, 0, 0, 0.7);
+      align-items: center;
+      justify-content: center;
+    }
+    .modal.active {
+      display: flex;
+    }
+    .modal-content {
+      background: #9b59b6;
+      padding: 30px;
+      border-radius: 20px;
+      color: #fff;
+      max-width: 400px;
+      text-align: center;
+      animation: fadeIn 0.5s ease forwards;
+    }
+    @keyframes fadeIn {
+      from { transform: translateY(-30px); }
+      to { transform: translateY(0); }
+    }
+    .modal-content p {
+      margin-bottom: 20px;
+    }
+    .modal-content button {
+      padding: 10px 20px;
+      background: #fff;
+      color: #9b59b6;
+      font-weight: bold;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+    .modal-content button:hover {
+      background: #eee;
+    }
   </style>
 </head>
 
@@ -117,10 +160,33 @@
     <h2> বাংলাদেশ ইয়ুথ আইসিটি ফোরাম </h2>
     <p>প্রিয় শিক্ষার্থীরা, অনুগ্রহ করে নীচের লিংকগুলো ব্যবহারের মাধ্যমে তোমরা তোমাদের কার্যক্রম সম্পন্ন করতে পারো।</p>
 
-    <a href="#" class="btn"><i class="fas fa-user-lock"></i> সেলফ ডেস্ক লগইন </a>
+    <span class="btn" id="selfDeskBtn"><i class="fas fa-user-lock"></i> সেলফ ডেস্ক লগইন </span>
     <a href="#" class="btn"><i class="fas fa-school"></i> শিক্ষার্থী সেবা কেন্দ্র </a>
     <a href="#" class="btn"><i class="fas fa-bolt"></i> এক ক্লিকে সেবা </a>
     <a href="#" class="btn"><i class="fas fa-globe"></i> ডিজিবিও পোর্টাল </a>
     <a href="#" class="btn"><i class="fas fa-plus-circle"></i> নতুন আবেদন </a>
   </div>
+
+  <div class="modal" id="modal">
+    <div class="modal-content">
+      <p> এই মুহূর্তে, বাংলাদেশ ইয়ুথ আইসিটি ফোরাম লগইন সেবা সাময়িক সময়ের জন্য বন্ধ রেখেছে। আমার সার্ভার ট্রান্সপোর্টের কাজ চলছে। আপনার অপেক্ষার জন্য ধন্যবাদ। </p>
+      <button id="closeBtn"><i class="fas fa-times-circle"></i> বন্ধ করুন </button>
+    </div>
+  </div>
+
+  <script>
+    document.getElementById('selfDeskBtn').addEventListener('click', () => {
+      document.getElementById('modal').classList.add('active');
+    });
+
+    document.getElementById('closeBtn').addEventListener('click', () => {
+      document.getElementById('modal').classList.remove('active');
+    });
+
+    window.addEventListener('click', (e) => {
+      if (e.target === document.getElementById('modal')) {
+        document.getElementById('modal').classList.remove('active');
+      }
+    });
+  </script>
 </body>
