--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
     <span class="btn" id="selfDeskBtn"><i class="fas fa-user-lock"></i> সেলফ ডেস্ক লগইন </span>
     <span class="btn" id="noticeBtn"><i class="fas fa-bell"></i> সাম্প্রতিক নোটিশ </span>
-    <a href="#" class="btn"><i class="fas fa-school"></i> শিক্ষার্থী সেবা কেন্দ্র </a>
+    <a href="stundet.html" class="btn"><i class="fas fa-school"></i> শিক্ষার্থী সেবা কেন্দ্র </a>
     <a href="#" class="btn"><i class="fas fa-bolt"></i> এক ক্লিকে সেবা </a>
     <a href="https://dgbo.vercel.app" class="btn"><i class="fas fa-globe"></i> ডিজিবিও পোর্টাল </a>
     <a href="https://dgbo.vercel.app" class="btn"><i class="fas fa-plus-circle"></i> নতুন আবেদন </a>
