--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 
 <body>
   <div class="glass-card" role="alert" aria-live="polite">
-    <h2> বাংলাদেশ ইয়ুথ আইসিটি ফোরাম </h2>
-    <p>প্রিয় শিক্ষার্থীরা, অনুগ্রহ করে নীচের লিংকগুলো ব্যবহারের মাধ্যমে তোমরা তোমাদের কার্যক্রম সম্পন্ন করতে পারো।</p>
+    <h2> বাংলাদেশ ইয়ুথ আইসিটি ফোরাম SelfDesk </h2>
+    <p>প্রিয় শিক্ষার্থী, বাংলাদেশ ইয়ুথ আইসিটি ফোরামের সেল্ফডেস্ক সার্ভিসে তোমাকে স্বাগতম। ইতিমধ্যেই, আমাদের SELFDESK সার্ভিসে লাইভ চ্যাট অপশন চালু করা রয়েছে। সুস্থ থাকুন, সুন্দর থাকুন, বিআইএফ এর সাথেই থাকুন। শুভকামনা।</p>
 
     <span class="btn" id="selfDeskBtn"><i class="fas fa-user-lock"></i> সেলফ ডেস্ক লগইন </span>
     <span class="btn" id="noticeBtn"><i class="fas fa-bell"></i> সাম্প্রতিক নোটিশ </span>
